--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="last_name">Last name</string>
     <string name="first_name">First name</string>
     <string name="todo">TODO</string>
+    <string name="registration">REGISTRATION</string>
 </resources>
